@@ -328,7 +328,8 @@ SysRes do_mremap( Addr old_addr, SizeT old_len,
    old_seg = VG_(am_find_nsegment)( old_addr );
    if (old_addr < old_seg->start || old_addr+old_len-1 > old_seg->end)
       goto eINVAL;
-   if (old_seg->kind != SkAnonC && old_seg->kind != SkFileC)
+   if (old_seg->kind != SkAnonC && old_seg->kind != SkFileC &&
+       old_seg->kind != SkShmC)
       goto eINVAL;
 
    vg_assert(old_len > 0);
